--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="./public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
-    <title>Vite + React + TS</title>
+    <title>Exam | Rodha </title>
   </head>
   <body class="font-poppins">
     <div id="root" class="min-w-full p-0 !important"></div>
